# bahamas

./: .buildinfo  .gitignore  CITE.md  README.html  README.md  bahamas.method.html  bahamas.psd_response.html  bahamas.psd_strain.html  bahamas_data.html  bahamas_inference.html  genindex.html  index.html  modules.html  objects.inv  paper.md  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  utilities.html  utilities_data.html  utilities_input.html  utilities_pe.html
.github/workflows/: arxiv.yaml  docs.yml  paper.yml  publish.yml  testing.yml
_sources/: index.rst.txt  modules.rst.txt  utilities.rst.txt  utilities_data.rst.txt  utilities_pe.rst.txt
bahamas/: __init__.py  backend.py  backend_context.py  bahamas_bpls.py  bahamas_bpls_old.py  bahamas_data.py  bahamas_inference.py  logger_config.py
bahamas.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
bahamas/method/: __init__.py  gaps.py  setting_data.py  setting_eryn.py  setting_hmc.py  setting_inference.py  setting_nessai.py
bahamas/psd_response/: __init__.py  average_envelope.py  average_envelope_num.py  modulation.py  orbits.py  response.py
bahamas/psd_strain/: __init__.py  egp.py  psd_function.py  psd_galaxy.py  (+2 more)
data/: example.ipynb  example_bahamas.ipynb  example_modulation.ipynb
paper/: paper.bib  paper.md
template/: config.yaml  config_nessai.yaml  config_nessai_gap.yaml  pe_galaxy_cyclo.yaml  pe_galaxy_stat.yaml
tests/: test_average_envelope.py  test_orbits.py  test_psd_function.py
utilities/: evidence.py  modulation.py  run_data.py  run_input.py  run_pe.py
(+19 files in other folders)
